# SyriusEngine

./: .clang-format  .gitmodules  CMakeLists.txt  Config.ini  CreateIni.py  README.md  TestMain.cpp  main.cpp
.github/workflows/: main.yml
Application/: ApplicationLayer.cpp  ApplicationLayer.hpp  CameraControl.cpp  CameraControl.hpp
Dependencies/glm/glm/: common.hpp  exponential.hpp  vector_relational.hpp
Dependencies/glm/glm/detail/: func_common.inl  qualifier.hpp  setup.hpp  type_mat4x4.inl  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
Dependencies/glm/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
Resources/Scenes/: 4Spheres.ini  BricksCube.ini  FastHouse.ini  FastHouse2.ini  InstancedCube.ini  LowPolyTree.ini  SlowHouse.ini  Survivalbackpack.ini
Resources/Shaders/GLSL/: Basic.frag  Basic.vert  EquirectangularToFBO.frag  EquirectangularToFBO.vert  GeometryPass.frag  GeometryPass.vert  IrradianceConversion.frag  IrradianceConversion.vert  LightPass.frag  LightPass.vert  SkyBoxPass.frag  SkyBoxPass.vert  Skybox.frag  Skybox.vert
Resources/Shaders/HLSL/: GeometryPass.ps  GeometryPass.vs  LightPass.ps  LightPass.vs
SyriusEngineApp/: Applayer.cpp  Applayer.hpp  BuiltIns.cpp  BuiltIns.hpp  Camera.hpp  MaterialLoader.cpp  MaterialLoader.hpp  Mesh.cpp  Mesh.hpp
SyriusEngineApp/PanelsUI/: LightPanel.cpp  LightPanel.hpp  MeshPanel.cpp  MeshPanel.hpp
SyriusEngineApp/SceneObjects/: LightObject.cpp  LightObject.hpp  Mesh.cpp  Mesh.hpp
SyriusEngineApp/Serializer/: ModelLoader.cpp  ModelLoader.hpp  Serializer.cpp  Serializer.hpp
SyriusEngineDev/: Applayer.cpp  Applayer.hpp  Camera.cpp  Include.hpp
Test/: TestEngineConfiguration.cpp  TestLayerStack.cpp
Test/Communication/: TestDispatcherManager.cpp
Test/Renderer/: IRenderComponentTest.cpp  IRenderComponentTest.hpp
Test/Renderer/RenderGraph/: TestRenderGraph.cpp
Test/Renderer/RenderGraph/Handles/: TestMeshHandle.cpp
Test/Renderer/RenderGraph/Stores/: TestGeometryStore.cpp  TestMaterialStore.cpp
Test/Threading/: TestWorker.cpp
Tests/: EngineInitializationTest.cpp  EngineInitializationTest.hpp  TestInclude.hpp
Tests/EntityComponentSystem/: EntityComponentSystemTest.cpp  EntityComponentSystemTest.hpp  ExampleComponents.cpp  ExampleComponents.hpp
Tests/Utils/: WorkerTest.cpp  WorkerTest.hpp
cmake/: FetchLibs.cmake
include/SyriusEngine/: BuiltIns.hpp  EngineConfiguration.hpp  Layer.hpp  RenderLayer.hpp  SyriusEngine.hpp
include/SyriusEngine/Core/: DebugMessageHandler.hpp  Limits.hpp  PlatformDetection.hpp  Profiler.hpp  SyriusEngineInclude.hpp
include/SyriusEngine/EntityComponentSystem/: Component.hpp  ECSPrimitives.hpp  EntityComponentSystem.hpp
include/SyriusEngine/Renderer/: BuiltinMeshes.hpp  Material.hpp  MaterialDesc.hpp  Primitives.hpp  RenderCommand.hpp  RenderLayer.hpp  RenderPrimitives.hpp
include/SyriusEngine/Utils/: EngineInclude.hpp  EngineLimits.hpp  ExportEngine.hpp  Worker.hpp
src/: EngineConfiguration.cpp  EngineData.cpp  EngineData.hpp  LayerStack.cpp  LayerStack.hpp  SyriusEngine.cpp
src/Communication/: AccessFunctions.hpp  Dispatcher.hpp  DispatcherManager.hpp
src/Renderer/: BuiltinMeshes.cpp  Material.cpp  Renderer.cpp  Renderer.hpp
src/Renderer/RenderGraph/: IRenderGraphData.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphContainer.hpp  RenderGraphData.cpp  RenderGraphData.hpp  RenderGraphDefs.cpp  RenderGraphDefs.hpp  RenderGraphLayer.cpp  RenderGraphLayer.hpp  RenderGraphNode.cpp  RenderGraphNode.hpp
src/Renderer/RenderGraph/Handles/: CameraHandle.cpp  CameraHandle.hpp  GBufferHandle.cpp  GBufferHandle.hpp  MaterialHandle.cpp  MaterialHandle.hpp  MeshHandle.cpp  MeshHandle.hpp  ProjectionHandle.cpp  ProjectionHandle.hpp  SamplerHandle.cpp  SamplerHandle.hpp  TransformHandle.cpp  TransformHandle.hpp
src/Renderer/RenderGraph/Other/: ScreenQuad.cpp  ScreenQuad.hpp
src/Renderer/RenderGraph/Stores/: GeometryStore.cpp  GeometryStore.hpp  LightStore.cpp  LightStore.hpp  MaterialStore.cpp  MaterialStore.hpp  MeshStore.cpp  MeshStore.hpp  ShaderStore.cpp  ShaderStore.hpp
src/SyriusEngine/: BuiltIns.cpp  EngineConfiguration.cpp  LayerStack.cpp  LayerStack.hpp  SyriusEngine.cpp  SyriusEngineImpl.cpp  SyriusEngineImpl.hpp
src/SyriusEngine/Core/: DebugMessageHandler.cpp  InternalInclude.cpp  InternalInclude.hpp  Profiler.cpp
src/SyriusEngine/EntityComponentSystem/: Component.cpp  EntityComponentSystem.cpp
src/SyriusEngine/Renderer/: MaterialDesc.cpp  Pass.hpp  PassMap.cpp  PassMap.hpp  Primitives.cpp  RenderGraph.hpp  RenderGraphInclude.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  RendererInclude.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp
src/SyriusEngine/Renderer/PBR/: CameraDataPass.cpp  GBufferPass.cpp  GBufferPass.hpp  GeometryPass.cpp  GeometryPass.hpp  LightDataPass.cpp  LightDataPass.hpp  LightPass.cpp  MaterialHandle.cpp  MaterialHandle.hpp  MeshHandle.cpp  MeshHandle.hpp  PBRRenderLayer.cpp  PBRRenderLayer.hpp  ProjectionPass.cpp  ProjectionPass.hpp
src/SyriusEngine/Renderer/RenderGraph/: Pass.cpp  Pass.hpp  PassMap.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphDefs.hpp  RenderGraphLayer.cpp  RenderGraphLayer.hpp  RenderPass.hpp
src/SyriusEngine/Renderer/RenderGraph/Passes/: CameraDataPass.hpp  GBufferPass.cpp  GeometryPass.cpp  GeometryPass.hpp  LFWRSamplerPass.cpp  LFWRSamplerPass.hpp  LightDataPass.cpp  LightPass.cpp  LightPass.hpp  MaterialHandle.cpp  MaterialHandle.hpp  MeshHandle.hpp  SkyBoxPass.cpp  SkyBoxPass.hpp
src/SyriusEngine/Utils/: KeyVector.hpp  Worker.cpp  Worker.hpp
src/Threading/: ThreadingDefs.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp
src/Utils/: Worker.cpp  Worker.hpp
